--- a/releases.json
+++ b/releases.json
@@ -1,6 +1,6 @@
 [
     {
-        "version": "test",
+        "version": "1.0.0",
         "downloadUrl": "https://github.com/nicholasodo/craft-iconic/archive/master.zip",
         "date": "2016-08-11T14:00:00+00:00",
         "notes": [
