--- a/releases.json
+++ b/releases.json
@@ -1,10 +1,11 @@
 [
     {
-        "version": "1.0.0",
+        "version": "1.0.1",
         "downloadUrl": "https://github.com/nicholasodo/craft-iconic/archive/master.zip",
-        "date": "2016-08-11T14:00:00+00:00",
+        "date": "2016-08-12T14:00:00+00:00",
         "notes": [
-            "[Added] Initial release"
+            "[Fixed] Scoped Javascript",
+            "[Fixed] General Cleanup"
         ]
     }
 ]
