Create new icon & general cleanup

--- a/releases.json
+++ b/releases.json
@@ -1,11 +1,11 @@
 [
     {
-        "version": "1.0.1",
+        "version": "1.0.2",
         "downloadUrl": "https://github.com/nicholasodo/craft-iconic/archive/master.zip",
-        "date": "2016-08-12T14:00:00+00:00",
+        "date": "2016-08-18T10:57:31-04:00",
         "notes": [
-            "[Fixed] Scoped Javascript",
-            "[Fixed] General Cleanup"
+            "[Improved] Updated icon.",
+            "[Improved] General cleanup."
         ]
     }
 ]
