--- a/releases.json
+++ b/releases.json
@@ -6,5 +6,14 @@
         "notes": [
             "[Fixed] Fixed Missing CDN link.",
         ]
+    },
+    {
+        "version": "1.0.5",
+        "downloadUrl": "https://github.com/picdorsey/craft-iconic/archive/master.zip",
+        "date": "2017-06-01T17:00:00-00:00",
+        "notes": [
+            "[Fixed] Fixed initialization issue that prevented icons from appearing in preview mode (thanks @zipang).",
+            "[Fixed] TypeError: iconsFromSettings.forEach is not a function."
+        ]
     }
 ]
